--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^9.11.0",
     "sass": "^1.62.1",
     "unplugin-auto-import": "^0.15.3",
+    "unplugin-element-plus": "^0.7.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.4"
   }
